--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
             </ul>
         </center>
         <div class="parllax">
+            <center>
             <img src="https://cdn4.iconfinder.com/data/icons/education-filled-line-3/550/education-30-512.png" class="pic">
             <p id="pppp">I am</p><span id="name">Lehar Gupta</span>
             <br>
             <br>
             <h2>My Hobby Is Drawing.</h2>
-
+</center>
         </div>
     </section>
 
